fix: :bug: fix project being shifted

--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -8,7 +8,7 @@
 }
 
 .project {
-    width: 100vw;
+    width: calc(100vw - 1rem);
     height: 100%;
     display: flex;
     flex-shrink: 0;
